--- a/index.ipynb
+++ b/index.ipynb
@@ -288,8 +288,7 @@
     "import pandas\n",
     "file_name = './cities.xlsx'\n",
     "travel_df = pandas.read_excel(file_name)\n",
-    "cities = travel_df.to_dict('records')\n",
-    "cities"
+    "cities = travel_df.to_dict('records')"
    ]
   },
   {
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +323,7 @@
        "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +350,7 @@
        "dict_keys(['City', 'Country', 'Population', 'Area'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
